apps/user/node-app/overlays/dev/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/name: node-app
  name: node-app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: node-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-app
    spec:
      containers:
      - name: node-app
        image: ghcr.io/jacekzubielik/node-app:2.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        resources:
          requests:
            memory: 256Mi
            cpu: 250m    # 500milliCPUs (1/2 CPU)
          limits:
            memory: 512Mi
            cpu: 500m
